--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <title>example</title>
+    <title>INSSAFY</title>
+    </style>
   </head>
   <body>
     <noscript>
